<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jmapps.lessonsoframadan.presentation.ui.mainScreen.MainActivity">

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/favorite_checked_state"
        android:orderInCategory="1"
        android:title="@string/action_favorites"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_night_mode"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/action_night_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="4"
        android:title="@string/action_about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="5"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="6"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="7"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>